<resources>
    <string name="app_name">wagabatApp</string>
    <string name="login_text">Login</string>
    <string name="register_text">Signup Instead?</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="welcome_text">Wagba</string>
    <string name="create_new_account">Create New Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register_address_field">Address</string>
    <string name="register_full_name">Full Name</string>
    <string name="basket">Your Cart</string>
    <string name="special_request_string">Special request</string>
    <string name="add_a_note">Add a note</string>
    <string name="please_type_all_your_special_requests_here">Please type all your special requests here.</string>
    <string name="payment_summary_text">Payment summary</string>
    <string name="subtotalText">Subtotal</string>
    <string name="deilveryFeeText">Delivery fee</string>
    <string name="totalAmountText">Total amount</string>
    <string name="add_items">Add Items</string>
    <string name="checkoutBtn">Checkout</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="place_order">Place Order</string>
    <string name="pay_with">Pay with</string>
    <string name="title_activity_order_history">OrderHistory</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email_string">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="change_my_password">Send Password Reset Email</string>
    <string name="type_your_email">Type your email</string>
    <string name="egp">EGP</string>
    <string name="missingDescriptionString">Missing Description!</string>
    <string name="log_out">Log out</string>
    <string name="order_history">Order history</string>
</resources>