<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartPage">

    <TextView
        android:id="@+id/totalAmountCart4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/egp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/subtotalAmount"
        app:layout_constraintEnd_toStartOf="@+id/subtotalAmount"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/your_cart_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/basket"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15sp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="14dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="300dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_cart_textView"
        tools:listitem="@layout/cart_item" />

    <TextView
        android:id="@+id/subtotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:text="0.00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="12sp"
        android:background="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewCart" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/totalAmountText"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/deliveryFeeAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="12dp"
        android:text="0.00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtotalAmount" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/deilveryFeeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/subtotalText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentSummaryText" />

    <TextView
        android:id="@+id/totalAmountCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:text="0.00"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deliveryFeeAmount" />

    <TextView
        android:id="@+id/totalAmountCart2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/egp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/deliveryFeeAmount"
        app:layout_constraintEnd_toStartOf="@+id/deliveryFeeAmount"
        app:layout_constraintTop_toTopOf="@+id/deliveryFeeAmount"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/totalAmountCart3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/egp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/totalAmountCart"
        app:layout_constraintEnd_toStartOf="@+id/totalAmountCart"
        app:layout_constraintTop_toTopOf="@+id/totalAmountCart"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/paymentSummaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="16dp"
        android:text="@string/payment_summary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <Button
        android:id="@+id/checkoutBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#6d22d6"
        android:text="@string/checkoutBtn"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/deliveryTimeHidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="TextView"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="604dp" />

</androidx.constraintlayout.widget.ConstraintLayout>